# src/main/kotlin/plugins/routes/UserRoutes.kt
@@ -3,9 +3,10 @@ package com.ktor.plugins.routes
 import com.ktor.core.ApiResponse
 import com.ktor.core.Resource
 import com.ktor.data.model.user.UserRequestDTO
+import com.ktor.domain.model.User
+import com.ktor.domain.usecases.user.AuthAction
 import com.ktor.domain.usecases.user.AuthenticateUserUseCase
 import com.ktor.domain.usecases.user.FindUserUseCase
-import com.ktor.domain.usecases.user.RegisterUserUseCase
 import io.ktor.http.*
 import io.ktor.server.request.*
 import io.ktor.server.response.*
@@ -15,16 +16,15 @@ import toDomain
 import toUserResponseDTO
 
 fun Route.userRoutes(
-    registerUserUseCase: RegisterUserUseCase,
     findUserUseCase: FindUserUseCase,
-    authenticateUserUseCase: AuthenticateUserUseCase
+    authenticateUserUseCase: AuthenticateUserUseCase,
 ) {
     route("/users") {
         post("/register") {
             val userDTO = call.receive<UserRequestDTO>()
             val user = userDTO.toDomain()
 
-            val result = registerUserUseCase(user).last()
+            val result = authenticateUserUseCase.invoke(user = user, action = AuthAction.REGISTER).last()
 
             if (result.status == "success") {
                 call.respond(HttpStatusCode.Created, result)
@@ -38,7 +38,7 @@ fun Route.userRoutes(
             val userDTO = call.receive<UserRequestDTO>()
             val user = userDTO.toDomain()
 
-            val result = authenticateUserUseCase(user).last()
+            val result = authenticateUserUseCase.invoke(user = user, action = AuthAction.LOGIN).last()
 
             if (result.status == "success") {
                 call.respond(HttpStatusCode.OK, result)
@@ -52,16 +52,75 @@ fun Route.userRoutes(
             val domainUser = userDTO.toDomain()
 
             if (userDTO.username!!.isBlank()) {
-                call.respond(HttpStatusCode.BadRequest, ApiResponse<Unit>(
-                    data = null,
-                    messages = listOf("Username text cannot be empty."),
-                    status = "error",
-                    code = 400
-                ))
+                call.respond(
+                    HttpStatusCode.BadRequest, ApiResponse<Unit>(
+                        data = null,
+                        messages = listOf("Username text cannot be empty."),
+                        status = "error",
+                        code = 400
+                    )
+                )
                 return@get
             }
 
             val result = findUserUseCase(domainUser).last()
+
+            if (result.status == "success") {
+                call.respond(HttpStatusCode.OK, result)
+            } else {
+                call.respond(HttpStatusCode.fromValue(result.code ?: 500), result)
+            }
+        }
+
+        post("/change-password") {
+
+            val userDTO = call.receive<UserRequestDTO>()
+            val user = userDTO.toDomain()
+
+            val result = authenticateUserUseCase.invoke(user, userDTO.newPassword, action = AuthAction.FORGET_PASSWORD).last()
+
+            if (userDTO.email!!.isBlank()) {
+                call.respond(
+                    HttpStatusCode.BadRequest, ApiResponse<Unit>(
+                        messages = listOf("email text cannot be empty."),
+                        status = "error",
+                        code = 400
+                    )
+                )
+                return@post
+            }
+            if (userDTO.password!!.isBlank()) {
+                call.respond(
+                    HttpStatusCode.BadRequest, ApiResponse<Unit>(
+                        messages = listOf("Password text cannot be empty."),
+                        status = "error",
+                        code = 400
+                    )
+                )
+                return@post
+            }
+
+            if (userDTO.password.isBlank()) {
+                call.respond(
+                    HttpStatusCode.BadRequest, ApiResponse<Unit>(
+                        messages = listOf("Password text cannot be empty."),
+                        status = "error",
+                        code = 400
+                    )
+                )
+                return@post
+            }
+
+            if (userDTO.newPassword!!.isBlank()) {
+                call.respond(
+                    HttpStatusCode.BadRequest, ApiResponse<Unit>(
+                        messages = listOf("New password text cannot be empty."),
+                        status = "error",
+                        code = 400
+                    )
+                )
+                return@post
+            }
 
             if (result.status == "success") {
                 call.respond(HttpStatusCode.OK, result)
